# lightweight-maven-repository

./: .gitignore  Cargo.toml  config.yaml  log4rs.yaml
src/: error.rs  main.rs  maven.rs  middleware.rs  model.rs  response_utils.rs  xml.rs
src/handler/: get_artifact.rs  get_metadata.rs  head_artifact.rs  mod.rs  put_artifact.rs  put_metadata.rs
src/repo/: conf.rs  maven_metadata_serialization.rs  mod.rs
src/service/: authentication.rs  conf.rs  mod.rs
src/service/repo/: mod.rs
