[package]
name = "lightweight-maven-repository"
version = "0.1.0"
edition = "2021"

[dependencies]
rouille = "3.6"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = [ "derive" ] }
quick-xml = { version = "0.25", features = [ "serialize" ] }
time = { version = "0.3.15", features = ["macros", "formatting"] }

